@@ -1,3 +1,12 @@
+Tue Nov  3 23:24:52 CET 2015
+	Undoing change from Sun Oct 25 15:29:23 CET 2015
+	as the original code was counter-intuitive but
+	correct, and the new code does break pipelining. -CG
+	Releasing libmicrohttpd 0.9.45. -CG
+
+Sat Oct 31 15:52:52 CET 2015
+	Releasing libmicrohttpd 0.9.45. -CG
+
 Tue Oct 27 12:08:02 CET 2015
 	Rework deprecation maros: fix errors with old GCC versions,
 	improved support for old clang and new GCC. -EG
